// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it does not render order details if loading is true 1`] = `
<li
  className="root"
>
  <div
    className="orderNumberContainer"
  >
    <span
      className="orderNumberLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order #"
        id="orderRow.orderNumberText"
      />
    </span>
    <span
      className="orderNumber"
    >
      000000005
    </span>
  </div>
  <div
    className="orderDateContainer"
  >
    <span
      className="orderDateLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Date"
        id="orderRow.orderDateText"
      />
    </span>
    <span
      className="orderDate"
    >
      May 26, 2020
    </span>
  </div>
  <div
    className="orderTotalContainer"
  >
    <span
      className="orderTotalLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Total"
        id="orderRow.orderTotalText"
      />
    </span>
    <div
      className="orderTotal"
    >
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        434
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </div>
  </div>
  <div
    className="orderItemsContainer"
  >
    <div
      componentName="CollapsedImageGallery"
      items={
        Array [
          Object {
            "id": 1094,
            "sku": "VA03",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "valeria-two-layer-tank",
            "url_suffix": ".html",
          },
          Object {
            "id": 1103,
            "sku": "VP08",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "chloe-silk-shell",
            "url_suffix": ".html",
          },
          Object {
            "id": 1108,
            "sku": "VSW09",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "helena-cardigan",
            "url_suffix": ".html",
          },
        ]
      }
    />
  </div>
  <div
    className="orderStatusContainer"
  >
    <span
      className="orderStatusBadge"
    >
      Complete
    </span>
    <div
      componentName="OrderProgressBar"
    />
  </div>
  <button
    aria-expanded={false}
    className="contentToggleContainer"
    onClick={[MockFunction handleContentToggle]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </span>
  </button>
  <div
    className="content_collapsed"
  />
</li>
`;

exports[`it renders collapsed order row 1`] = `
<li
  className="root"
>
  <div
    className="orderNumberContainer"
  >
    <span
      className="orderNumberLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order #"
        id="orderRow.orderNumberText"
      />
    </span>
    <span
      className="orderNumber"
    >
      000000005
    </span>
  </div>
  <div
    className="orderDateContainer"
  >
    <span
      className="orderDateLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Date"
        id="orderRow.orderDateText"
      />
    </span>
    <span
      className="orderDate"
    >
      May 26, 2020
    </span>
  </div>
  <div
    className="orderTotalContainer"
  >
    <span
      className="orderTotalLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Total"
        id="orderRow.orderTotalText"
      />
    </span>
    <div
      className="orderTotal"
    >
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        434
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </div>
  </div>
  <div
    className="orderItemsContainer"
  >
    <div
      componentName="CollapsedImageGallery"
      items={
        Array [
          Object {
            "id": 1094,
            "sku": "VA03",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "valeria-two-layer-tank",
            "url_suffix": ".html",
          },
          Object {
            "id": 1103,
            "sku": "VP08",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "chloe-silk-shell",
            "url_suffix": ".html",
          },
          Object {
            "id": 1108,
            "sku": "VSW09",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "helena-cardigan",
            "url_suffix": ".html",
          },
        ]
      }
    />
  </div>
  <div
    className="orderStatusContainer"
  >
    <span
      className="orderStatusBadge"
    >
      Complete
    </span>
    <div
      componentName="OrderProgressBar"
    />
  </div>
  <button
    aria-expanded={false}
    className="contentToggleContainer"
    onClick={[MockFunction handleContentToggle]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </span>
  </button>
  <div
    className="content_collapsed"
  >
    <div
      componentName="Order Details"
      imagesData={
        Array [
          Object {
            "id": 1094,
            "sku": "VA03",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "valeria-two-layer-tank",
            "url_suffix": ".html",
          },
          Object {
            "id": 1103,
            "sku": "VP08",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "chloe-silk-shell",
            "url_suffix": ".html",
          },
          Object {
            "id": 1108,
            "sku": "VSW09",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "helena-cardigan",
            "url_suffix": ".html",
          },
        ]
      }
      orderData={
        Object {
          "billing_address": Object {
            "city": "Austin",
            "country_code": "US",
            "firstname": "Gooseton",
            "lastname": "Jr",
            "postcode": "78759",
            "region_id": "TX",
            "street": "Goose Dr",
            "telephone": "9123456789",
          },
          "id": 2,
          "invoices": Array [
            Object {
              "id": 1,
            },
          ],
          "items": Array [
            Object {
              "id": "3",
              "product_name": "Product 3",
              "product_sale_price": "$100.00",
              "product_sku": "VA03",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Blue",
                },
              ],
            },
            Object {
              "id": "4",
              "product_name": "Product 4",
              "product_sale_price": "$100.00",
              "product_sku": "VP08",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Black",
                },
              ],
            },
            Object {
              "id": "5",
              "product_name": "Product 5",
              "product_sale_price": "$100.00",
              "product_sku": "VSW09",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Orange",
                },
              ],
            },
          ],
          "number": "000000005",
          "order_date": "2020-05-26 18:22:35",
          "payment_methods": Array [
            Object {
              "additional_data": Array [
                Object {
                  "name": "card_type",
                  "value": "Visa",
                },
                Object {
                  "name": "last_four",
                  "value": "1234",
                },
              ],
              "name": "Braintree",
              "type": "Credit Card",
            },
          ],
          "shipments": Array [
            Object {
              "id": "1",
              "tracking": Array [
                Object {
                  "carrier": "Fedex",
                  "number": "FEDEX5885541235452125",
                },
              ],
            },
          ],
          "shipping_address": Object {
            "city": "Austin",
            "country_code": "US",
            "firstname": "Gooseton",
            "lastname": "Jr",
            "postcode": "78759",
            "region_id": "TX",
            "street": "Goose Dr",
            "telephone": "9123456789",
          },
          "shipping_method": "Free",
          "status": "Complete",
          "total": Object {
            "discounts": Array [
              Object {
                "amount": Object {
                  "currency": "USD",
                  "value": 123,
                },
              },
            ],
            "grand_total": Object {
              "currency": "USD",
              "value": 1434,
            },
            "subtotal": Object {
              "currency": "USD",
              "value": 1234,
            },
            "total_shipping": Object {
              "currency": "USD",
              "value": 12,
            },
            "total_tax": Object {
              "currency": "USD",
              "value": 34,
            },
          },
        }
      }
    />
  </div>
</li>
`;

exports[`it renders open order row 1`] = `
<li
  className="root"
>
  <div
    className="orderNumberContainer"
  >
    <span
      className="orderNumberLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order #"
        id="orderRow.orderNumberText"
      />
    </span>
    <span
      className="orderNumber"
    >
      000000005
    </span>
  </div>
  <div
    className="orderDateContainer"
  >
    <span
      className="orderDateLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Date"
        id="orderRow.orderDateText"
      />
    </span>
    <span
      className="orderDate"
    >
      May 26, 2020
    </span>
  </div>
  <div
    className="orderTotalContainer"
  >
    <span
      className="orderTotalLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Total"
        id="orderRow.orderTotalText"
      />
    </span>
    <div
      className="orderTotal"
    >
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        434
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </div>
  </div>
  <div
    className="orderItemsContainer"
  />
  <div
    className="orderStatusContainer"
  >
    <span
      className="orderStatusBadge"
    >
      Complete
    </span>
    <div
      componentName="OrderProgressBar"
    />
  </div>
  <button
    aria-expanded={true}
    className="contentToggleContainer"
    onClick={[MockFunction handleContentToggle]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="18 15 12 9 6 15"
        />
      </svg>
    </span>
  </button>
  <div
    className="content"
  >
    <div
      componentName="Order Details"
      imagesData={
        Array [
          Object {
            "id": 1094,
            "sku": "VA03",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "valeria-two-layer-tank",
            "url_suffix": ".html",
          },
          Object {
            "id": 1103,
            "sku": "VP08",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "chloe-silk-shell",
            "url_suffix": ".html",
          },
          Object {
            "id": 1108,
            "sku": "VSW09",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "helena-cardigan",
            "url_suffix": ".html",
          },
        ]
      }
      orderData={
        Object {
          "billing_address": Object {
            "city": "Austin",
            "country_code": "US",
            "firstname": "Gooseton",
            "lastname": "Jr",
            "postcode": "78759",
            "region_id": "TX",
            "street": "Goose Dr",
            "telephone": "9123456789",
          },
          "id": 2,
          "invoices": Array [
            Object {
              "id": 1,
            },
          ],
          "items": Array [
            Object {
              "id": "3",
              "product_name": "Product 3",
              "product_sale_price": "$100.00",
              "product_sku": "VA03",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Blue",
                },
              ],
            },
            Object {
              "id": "4",
              "product_name": "Product 4",
              "product_sale_price": "$100.00",
              "product_sku": "VP08",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Black",
                },
              ],
            },
            Object {
              "id": "5",
              "product_name": "Product 5",
              "product_sale_price": "$100.00",
              "product_sku": "VSW09",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Orange",
                },
              ],
            },
          ],
          "number": "000000005",
          "order_date": "2020-05-26 18:22:35",
          "payment_methods": Array [
            Object {
              "additional_data": Array [
                Object {
                  "name": "card_type",
                  "value": "Visa",
                },
                Object {
                  "name": "last_four",
                  "value": "1234",
                },
              ],
              "name": "Braintree",
              "type": "Credit Card",
            },
          ],
          "shipments": Array [
            1,
          ],
          "shipping_address": Object {
            "city": "Austin",
            "country_code": "US",
            "firstname": "Gooseton",
            "lastname": "Jr",
            "postcode": "78759",
            "region_id": "TX",
            "street": "Goose Dr",
            "telephone": "9123456789",
          },
          "shipping_method": "Free",
          "status": "Complete",
          "total": Object {
            "discounts": Array [
              Object {
                "amount": Object {
                  "currency": "USD",
                  "value": 123,
                },
              },
            ],
            "grand_total": Object {
              "currency": "USD",
              "value": 1434,
            },
            "subtotal": Object {
              "currency": "USD",
              "value": 1234,
            },
            "total_shipping": Object {
              "currency": "USD",
              "value": 12,
            },
            "total_tax": Object {
              "currency": "USD",
              "value": 34,
            },
          },
        }
      }
    />
  </div>
</li>
`;

exports[`it renders with missing order information 1`] = `
<li
  className="root"
>
  <div
    className="orderNumberContainer"
  >
    <span
      className="orderNumberLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order #"
        id="orderRow.orderNumberText"
      />
    </span>
    <span
      className="orderNumber"
    >
      000000005
    </span>
  </div>
  <div
    className="orderDateContainer"
  >
    <span
      className="orderDateLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Date"
        id="orderRow.orderDateText"
      />
    </span>
    <span
      className="orderDate"
    >
      May 26, 2020
    </span>
  </div>
  <div
    className="orderTotalContainer"
  >
    <span
      className="orderTotalLabel"
    >
      <div
        componentName="Formatted Message Component"
        defaultMessage="Order Total"
        id="orderRow.orderTotalText"
      />
    </span>
    <div
      className="orderTotal"
    >
      -
    </div>
  </div>
  <div
    className="orderItemsContainer"
  >
    <div
      componentName="CollapsedImageGallery"
      items={
        Array [
          Object {
            "id": 1094,
            "sku": "VA03",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "valeria-two-layer-tank",
            "url_suffix": ".html",
          },
          Object {
            "id": 1103,
            "sku": "VP08",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "chloe-silk-shell",
            "url_suffix": ".html",
          },
          Object {
            "id": 1108,
            "sku": "VSW09",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "helena-cardigan",
            "url_suffix": ".html",
          },
        ]
      }
    />
  </div>
  <div
    className="orderStatusContainer"
  >
    <span
      className="orderStatusBadge"
    >
      Received
    </span>
    <div
      componentName="OrderProgressBar"
    />
  </div>
  <button
    aria-expanded={false}
    className="contentToggleContainer"
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </span>
  </button>
  <div
    className="content_collapsed"
  >
    <div
      componentName="Order Details"
      imagesData={
        Array [
          Object {
            "id": 1094,
            "sku": "VA03",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "valeria-two-layer-tank",
            "url_suffix": ".html",
          },
          Object {
            "id": 1103,
            "sku": "VP08",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "chloe-silk-shell",
            "url_suffix": ".html",
          },
          Object {
            "id": 1108,
            "sku": "VSW09",
            "thumbnail": Object {
              "url": "https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg",
            },
            "url_key": "helena-cardigan",
            "url_suffix": ".html",
          },
        ]
      }
      orderData={
        Object {
          "billing_address": Object {
            "city": "Austin",
            "country_code": "US",
            "firstname": "Gooseton",
            "lastname": "Jr",
            "postcode": "78759",
            "region_id": "TX",
            "street": "Goose Dr",
            "telephone": "9123456789",
          },
          "id": 2,
          "invoices": Array [
            Object {
              "id": 1,
            },
          ],
          "items": Array [
            Object {
              "id": "3",
              "product_name": "Product 3",
              "product_sale_price": "$100.00",
              "product_sku": "VA03",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Blue",
                },
              ],
            },
            Object {
              "id": "4",
              "product_name": "Product 4",
              "product_sale_price": "$100.00",
              "product_sku": "VP08",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Black",
                },
              ],
            },
            Object {
              "id": "5",
              "product_name": "Product 5",
              "product_sale_price": "$100.00",
              "product_sku": "VSW09",
              "quantity_ordered": 1,
              "selected_options": Array [
                Object {
                  "label": "Color",
                  "value": "Orange",
                },
              ],
            },
          ],
          "number": "000000005",
          "order_date": "2020-05-26 18:22:35",
          "payment_methods": Array [
            Object {
              "additional_data": Array [
                Object {
                  "name": "card_type",
                  "value": "Visa",
                },
                Object {
                  "name": "last_four",
                  "value": "1234",
                },
              ],
              "name": "Braintree",
              "type": "Credit Card",
            },
          ],
          "shipments": Array [
            Object {
              "id": "1",
              "tracking": Array [
                Object {
                  "carrier": "Fedex",
                  "number": "FEDEX5885541235452125",
                },
              ],
            },
          ],
          "shipping_address": Object {
            "city": "Austin",
            "country_code": "US",
            "firstname": "Gooseton",
            "lastname": "Jr",
            "postcode": "78759",
            "region_id": "TX",
            "street": "Goose Dr",
            "telephone": "9123456789",
          },
          "shipping_method": "Free",
          "status": "Received",
          "total": Object {
            "discounts": Array [],
            "grand_total": Object {
              "currency": null,
              "value": 1000,
            },
            "subtotal": Object {
              "currency": null,
              "value": null,
            },
            "total_shipping": Object {
              "currency": null,
              "value": null,
            },
            "total_tax": Object {
              "currency": null,
              "value": null,
            },
          },
        }
      }
    />
  </div>
</li>
`;
